<resources>
    <!-- Android app name -->
    <string name="app_name">Chatdraw</string>

    <!-- Settings -->
    <string name="action_sign_in_short" translatable="false">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please re-enter your new password</string>
    <string name="btn_link_to_register">New to Chatdraw? Register now!</string>
    <string name="btn_link_to_login">Already registered? Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change Password</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We need your registered Email Address to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="new_group">New Group</string>
    <string name="group_name">Group name</string>
    <string name="add_friend" translatable="false">Add friend</string>

    <string name="profile_name">Profile name:</string>

    <string name="username">Username:</string>

    <string name="finish">Finish</string>
    <string name="later">Later</string>

    <string name="invalid_password">Password too short</string>
    <string name="invalid_email">Email Invalid</string>

    <string name="congrats_text">You are one more step to go!</string>
    <string name="chat_hint">Start typing...</string>
    <string name="add" translatable="false"></string>
    <string name="settings_butt">Account</string>

    <string name="password_butt">Password Lock</string>

    <string name="notification_butt">Notification</string>
    <string name="sound_butt">Sound</string>
    <string name="settings_pref">Settings Preference</string>
    <string name="save_butt">Edit and Save</string>
    <string name="name_hint">Your Profile Name</string>
    <string name="username_hint">Your Username</string>

    <!-- Profile Settings -->
    <string name="long_name">Name too long</string>
    <string name="short_name">Name too short</string>
    <string name="profiledetails">Your profile name will be visible to the people who are using this app. In order to be added by your friends or shares your contact to others, you might want to set up your username. </string>
    <string name="profile_requirement">Your name can contains any characters. The minimum characters of your profile name should be 3 and the maximum is 20.</string>

    <!-- Username Settings -->
    <string name="short_username">Username too short</string>
    <string name="long_username">Username too long</string>
    <string name="username_symbol">@</string>
    <string name="usernamedetails">Your user name will be used by your friends or others to add you and to share your contact to others.</string>
    <string name="username_requirement">Your username shall be unique. Your name can only contains characters from a&#8211;z, 0&#8211;9 and underscores. The minimum characters of your profile name should be 3 and the maximum is 20.</string>
    <string name="username_exists">Username exists</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings_edit">SettingsEdit</string>

    <!-- Preference Titles -->
    <string name="bio_header">Bio</string>
    <string name="settings_header">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="faq_header"><![CDATA[About & FAQ]]></string>
    <string name="contact_us_header">Contact us</string>

    <!-- Bio Preferences -->
    <string name="profile_name_title">Profile Name</string>
    <string name="username_title">Username</string>
    <string name="status_title">Status</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Rating Preferences -->
    <string name="rating_text">Rate us</string>
    <string name="rating_comment">Tell us what you think of this app</string>
    <string name="rate_here">Type here ....</string>
    <string name="submit_button">Submit</string>
    <string name="thank_you_rating">Thank you for your rating! Please leave us a review in Google Play Store! Your rating will motivate us to improve our app better. </string>

    <!-- Content Description for XML -->
    <string name="add_message_content">Add message button</string>
    <string name="launch_content">Icon for launch</string>
    <string name="main_logo_content">Application Logo</string>

    <!-- Contact us -->
    <string name="contact_us_title">How to contact us:</string>
    <string name="contact_us_step_one">To give feedback or to support us, please go to [Settings] -> [Rate us] button on [Help and Support] tab</string>
    <string name="contact_us_step_two">You can inform/contact us through email at "chatdrawfeedback@gmail.com" or fill in the below form with following criteria: </string>
    <string name="contact_us_step_two_one">To ask for QUESTIONS related to Chatdraw, please set the form "Feedback code" or email title with prefix: [QUESTIONS]</string>
    <string name="contact_us_step_two_one_example"><![CDATA[Email subject or Feedback code: [QUESTIONS]
    What does Chatdraw different from
    another app?]]></string>
    <string name="contact_us_step_two_two">To report for BUGS/PROBLEMS related to Chatdraw, please set the form "Feedback code" or email title with prefix: [BUGS]</string>
    <string name="contact_us_step_two_two_example"><![CDATA[Email subject or Feedback code: [BUGS]
    Why does the app force shut down when
    I try to invite a friend?]]></string>
    <string name="contact_us_step_two_three">To give SUGGESTIONS related to Chatdraw, please set the form "Feedback code" or email title with prefix: [SUGGESTS]</string>
    <string name="contact_us_step_two_three_example"><![CDATA[Email subject or Feedback code: [SUGGESTS]
    I recommend Chatdraw to enable login
    using username instead.]]></string>
    <string name="contact_us_step_three">If your queries are not listed in the above cases, please email us at "chatdrawfeedback@gmail.com" or fill the form with "Feedback code" or email title starts with: [OTHERS]</string>
    <string name="contact_us_step_three_example"><![CDATA[Email subject or Feedback code: [OTHERS]
    ....your..message..here.... ]]></string>
    <string name="contact_us_message">Message body:</string>
    <string name="contact_us_question">Title:</string>
    <string name="contact_us_code">Feedback code:</string>
    <string name="contact_click_me">Click me</string>
    <string name="contact_example">Example:</string>

    <string name="bullet_point">•</string>
    <string name="point_a">a)</string>
    <string name="point_b">b)</string>
    <string name="point_c">c)</string>
    <string-array name="contact_question_code">
        <item>QUESTIONS</item>
        <item>BUGS</item>
        <item>SUGGESTS</item>
        <item>OTHERS</item>
    </string-array>

    <!-- About -->
    <string name="chatdraw_version">1.0</string>
    <string name="copyright">&#169; 2019 Chatdraw app</string>

    <!-- Find friends Activity -->
    <string name="record_not_found">Record not found!</string>

    <!-- Invite Friends Activity -->
    <string name="invite_friend_title">Share this invitation link to your friends:</string>
    <string name="invite_link">https://chatdraw.page.link/app</string>
    <string name="copy_button">Copy</string>
    <string name="invite_share">Share to friends</string>

    <!-- Credit Activity -->
    <string name="credit_name">Credits:</string>
    <string name="credit_currency">CTD</string>
    <string name="credit_history_button">HISTORY</string>
    <string name="credit_history">History:</string>
</resources>
