<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="top|center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    tools:context=".AccountActivity.NameEditActivity">

    <TextView
        android:layout_gravity="start"
        android:textSize="24sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp"
        android:text="@string/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_name"
        android:hint="@string/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/name_submit"
        android:text="@string/save_butt"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="15sp"
        android:layout_width="200sp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/profiledetails"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/profile_requirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>