<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AccountActivity.ContactUsActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="top|center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/contact_us_title"
            android:layout_margin="10sp"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/point_a"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/contact_us_step_one"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/point_b"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/contact_us_step_two"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bullet_point"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/contact_us_step_two_one"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bullet_point"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/contact_us_step_two_two"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bullet_point"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/contact_us_step_two_three"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/point_c"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_width="20sp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/contact_us_step_three"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/contact_us_code"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/contact_click"
                    android:text="@string/contact_click_me"
                    android:background="@color/s"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="4"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/contact_us_question"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/question_section"
                    android:textSize="14sp"
                    android:gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:padding="4sp"
                    android:inputType="text|textMultiLine"
                    android:textColorHint="@color/input_register"
                    android:hint="@string/rate_here"
                    android:layout_margin="10sp"
                    android:background="@color/btn_login_bg"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:text="@string/contact_us_message"
            android:textColor="@color/white"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/message_section"
            android:textSize="14sp"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:padding="8sp"
            android:inputType="text|textMultiLine"
            android:textColorHint="@color/input_register"
            android:hint="@string/rate_here"
            android:layout_margin="10sp"
            android:background="@color/btn_login_bg"/>

        <Button
            android:id="@+id/contact_submit_button"
            android:text="@string/submit_button"
            android:background="@color/btn_login"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/contact_example"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:text="@string/contact_us_step_two_one_example"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:text="@string/contact_us_step_two_two_example"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:text="@string/contact_us_step_two_three_example"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="10sp"
            android:text="@string/contact_us_step_three_example"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>