<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountactivity.NameEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="top|center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">
        <TextView
            android:layout_gravity="start"
            android:textSize="24sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/username_symbol"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_username"
                android:hint="@string/username_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/username_submit"
            android:text="@string/save_butt"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="15sp"
            android:layout_width="200sp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/usernamedetails"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/username_requirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>