<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="top|center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity.PersonalActivity">

    <TextView
        android:text="@string/congrats_text"
        android:textSize="22sp"
        android:layout_margin="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/rockets"
        android:layout_width="100sp"
        android:layout_height="100sp" />

    <TextView
        android:layout_gravity="start"
        android:textSize="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="50sp"
        android:text="@string/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/profile_text"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="start"
        android:textSize="20sp"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="10sp"
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/username_text"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/later_button"
            android:text="@string/later"
            android:layout_margin="30sp"
            android:layout_width="100sp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/finish_button"
            android:text="@string/finish"
            android:layout_margin="30sp"
            android:layout_width="100sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>