<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp"
    android:background="@color/btn_login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InviteFriendActivity">

    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:text="@string/invite_friend_title"
        android:textStyle="bold"
        android:textSize="21sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="5"
            android:id="@+id/link_view"
            android:text="@string/invite_link"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:id="@+id/copy_button"
            android:text="@string/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/share_button"
        android:text="@string/invite_share"
        android:background="@color/btn_login"
        android:layout_marginTop="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>